--- a/sobremim.html
+++ b/sobremim.html
@@ -19,7 +19,7 @@
                 Objetivo Profissional:
             </div>
             <div class="conteudo__info__texto">
-                Conseguir oportunidade como cientista de dados, área a qual possuo experiência na liguagem SQL e também em Python. Além disso, também possuo conhecimentos básicos em JavaScript, HTML/CSS e Java.
+                Conseguir oportunidade como cientista de dados, área na qual possuo experiência na liguagem SQL e também em Python. Além disso, também possuo conhecimentos básicos em JavaScript, HTML/CSS e Java.
             </div>
             <div class="conteudo__info__titulo">
                 Formação Acadêmica:
